# tilck

./: .azure-pipelines.yml  .clang-format  .clangd  .codecov.yml  .dockerignore  .gitignore  .nvim.lua  .travis.yml  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  bochsrc.bxrc  boot_stage2.asm  bootloader_stage1_error.txt  build_toolchain  build_toolchain.sh  cmake_run  code_of_conduct.md  contributing.md  create_vmdk.sh  debug_run_qemu  exos.bochs  exos.files  exos.includes  gdt.c  gen_config.cmake  generate_coverage_report  idt.c  irq.c  kb.c  kernel32.c  kernelAsm.asm  kernelBase.asm  link.ld  link2.ld  make_iso.sh  make_run  (+18 more)
boot/efi/: CMakeLists.txt  GenericBuild.cmake  defs.h  efimain.c  elf_loader.c  intf.c  multiboot.c  panic.c  ramdisk.c  setup_graphics.c  utils.c  utils.h
boot/legacy/: CMakeLists.txt  basic_printk.c  basic_term.c  boot.S  boot_enable_a20.S  early_boot_script.ld  elf_stage3_script.ld  mm.c  mm.h  realmode_call.c  realmode_call.h  setup_graphics.c  stage3.c  stage3_entry.S  utils.c  vbe.c  vbe.h
bootloader/: CMakeLists.txt  Makefile  basic_printk.c  basic_term.c  basic_term.h  boot.S  boot.asm  boot_enable_a20.S  boot_stage1.asm  boot_stage2.asm  common_linker_script.ld  early_boot_script.ld  elf_stage3_script.ld  gas_boot.S  linker_script.ld  naive_malloc.c  realModeStrings.asm  realModeStrings.inc  realmode_call.c  realmode_call.h  setup_graphics.c  stage3.c  stage3_entry.S  stage3_entry.asm  stage3_rm_calls.S  stage3_script.ld  utils.c  vbe.c  vbe.h
bootloader/efi/: CMakeLists.txt  GenericBuild.cmake  defs.h  efimain.c  elf_loader.c  multiboot.c  multiboot_funcs.h  ramdisk.c  setup_graphics.c  switchmode.asm  switchmode_gas.S  utils.c  utils.h
init_src/: CMakeLists.txt  Makefile  asmInit.asm  init.c  link.ld  string.c  string.h  syscall_interface.h  usermode_syscall_wrappers.h
kernel/: CMakeLists.txt  Makefile  auth.c  avl_bintree.c  cmdline.c  cwd.c  datetime.c  debug.c  debug_utils.c  elf.c  elf_loader.c  execve.c  exit.c  ext_string_util.c  fault_resumable.c  fb_console.c  fork.c  gcov.c  interrupts.c  kb.c  kb_input.c  kcond.c  kmalloc.c  kmalloc_debug.h  kmalloc_util.c  kmutex.c  ksem.c  main.c  misc.c  mm.c  mock.c  modules.c  pageframe_allocator.c  paging_pageframe_allocator.c  parse_cmdline.c  perftests.c  pipe.c  poll.c  pq.c  printk.c  (+31 more)
kernel/arch/: CMakeLists.txt
kernel/bintree/: avl_bintree.c  avl_find.c.h  avl_insert.c.h  avl_int.h  avl_remove.c.h
kernel/char/: fbdev.c  serial.c  term.c  term_action_wrappers.c.h  term_int.h  tty.c  tty_ctrl_handlers.c.h  tty_input.c  tty_input.c.h  tty_int.h  tty_ioctl.c  tty_output.c  tty_termios_debug.h
kernel/fb/: fb_console.c  fb_int.h  fb_raw.c  font.psf
kernel/fs/: devfs.c  exvfs.c  exvfs_util.c  fat32.c  fat32_debug.c  fat32_mm.c  flock.c  fs_int.h  fs_syscalls.c  kernelfs.c  mp.c  ramfs.c  vfs.c  vfs_util.c
kernel/i386/: Makefile  gdt.c  idt.c  int64ops.s  irq.c  kernelAsm.asm  paging.c  process.c  process32.c  utils32.c
kernel/include/: arch_utils.h  bintree.h  common_defs.h  debug_utils.h  elf_loader.h  hal.h  irq.h  kb.h  kmalloc.h  list.h  pageframe_allocator.h  paging.h  pq.h  process.h  serial.h  string_util.h  sync.h  tasklet.h  term.h  timer.h  utils.h
kernel/kmalloc/: general_kmalloc.c.h  kmalloc.c  kmalloc_accelerator.c.h  kmalloc_block_node.h  kmalloc_debug.h  kmalloc_heap_struct.h  kmalloc_heaps.c.h  kmalloc_int.h  kmalloc_leak_detector.c.h  kmalloc_small_heaps.c.h  kmalloc_stats.c.h
kernel/mm/: general_kmalloc.c.h  kmalloc.c  kmalloc_accelerator.c.h  kmalloc_block_node.h  kmalloc_debug.h  kmalloc_heap_struct.h  kmalloc_heaps.c.h  kmalloc_heaps_debug.c.h  kmalloc_leak_detector.c.h  kmalloc_small_heap.c.h  kmalloc_small_heaps.c.h  kmalloc_stats.c.h  pageframe_allocator.c  pg_alloc.c  process_mm.c  process_mm_base.c  system_mmap.c
kernel/net/: net.c
kernel/self_tests/: perftests.c  perftests_data.c  se_alloc_pageframe_perf.c  se_common.c  se_data.c  se_data.h  se_fault_resumable.c  se_kcond.c  se_kmalloc_perf.c  se_kmutex.c  se_mobj_waiter.c  se_tasklet.c  selftest_tasklet.c  testrunners.c
kernel/test_stuff/: testrunners.c
kernel/tty/: term.c  term_action_wrappers.c.h  term_aux.c  term_int.h  term_mgmt.c  tty.c  tty_ctrl_handlers.c.h  tty_input.c  tty_int.h  tty_ioctl.c  ttyaux.c
kernel/vfs/: vfs.c  vfs_getdents.c.h  vfs_int.h  vfs_op_ready.c.h
scripts/build_apps/: .gitignore  CMakeLists.txt  elfhack.c  fat_get_used_bytes.c  fathack.c  gen_config.cpp  machohack.c  make_symtabs_loadable.c  mbrhack.c  pbm2text.c  pnm2text.c
tests/unit/: .clangd  CMakeLists.txt  README  asm_fake_funcs.c  asm_mocks.c  avl_bintree.cpp  cmdline.cpp  console_test.cpp  datetime_test.cpp  exp_file2.c  fake_funcs_utils.h  fat32_debug.c  fat32_test.cpp  fork_test.cpp  generic_mocks.c  generic_stubs.c  itoa.cpp  itoa_test.cpp  kernel_init_funcs.h  kmalloc_mocks.cpp  kmalloc_test.cpp  kmutex_fake.c  kmutex_mock.c  list_test.cpp  mem_regions.cpp  misc_fake.c  mm_fakes.cpp  mock_experiments.cpp  mocked_funcs.h  mocking.cpp  mocking.h  printk_test.cpp  ringbuf_test.cpp  sched_test.cpp  sort_test.cpp  string_util_test.cpp  tasklet_test.cpp  tracerTest.cpp  tracing_test.cpp  trivial_allocator.h  (+8 more)
tools/coverage-viewer/: CMakeLists.txt  README.md  app.cpp  app.h  colors.cpp  colors.h  main.cpp  (+8 more)
unittests/: CMakeLists.txt  Makefile  asmMocks.c  asm_mocks.c  avl_bintree.cpp  cmdline.cpp  exvfs_test.cpp  fat32.cpp  fat32_test.cpp  general_pageframe_allocator_test.cpp  generic_mocks.c  itoa.cpp  kernel_init_funcs.h  kmalloc_mocks.cpp  kmalloc_test.cpp  list_test.cpp  mem_regions.cpp  mocks.c  mocks.h  pageframe_allocator_test.cpp  paging_pageframe_allocator_test.cpp  ringbuf_test.cpp  sort_test.cpp  tasklet_test.cpp  testmain.c  tests_main.cpp  vfs_test.cpp
userapps/: CMakeLists.txt  README.md  dp.c  fbtest.c  filedump.c  init.c  ncapp.c  play.c  termtest.c
usermode_apps/: CMakeLists.txt  README.md  devshell.c  devshell_commands.c  devshell_readcmd.c  fbtest.c  init.c  ncapp.c  shell.c  shell_commands.c  sysenter.h  termtest.c
usermode_init/: CMakeLists.txt  init.c
(+1451 files in other folders)
